--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,14 @@
-<h1> Talal's Blog </h1>
+<% @posts.each do |post| %>
+  <div class="post_wrapper">
+    <h2 class="title">
+      <%= link_to post.title, post%>
+    </h2>
 
-<%= @posts.each do |post| %>
-<div class="post_wrapper">
-  <h2 class="title">
-    <%= link_to post.title, post%>
-  </h2>
-  <p class="date">
-    <%= post.created_at.strftime("%B, %d, %Y") %>
-  </p>
-</div>
+    <p class="body">
+      <%= post.body %>
+    </p>
+    <p class="date">
+      <%= post.created_at.strftime("%B, %d, %Y") %>
+    </p>
+  </div>
 <% end %>
