--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,15 @@
 <div id="page_wrapper">
   <%= form_for :post, url: posts_path do |f| %>
+    <div id="errors">
+      <% if @post.errors.any? %>
+        <h2> <%= pluralize(@post.errors.count, "error") %> </h2>
+      <% end %>
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li> <%= msg %> </li>
+        <% end %>
+      </ul>
+    </div>
   <p>
     <%= f.label :title %> <br>
     <%= f.text_field :title %>
