--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <ul>
     <li class="category"> Website </li>
     <li> <%= link_to "Blog", root_path %> </li>
-    <li>About</li>
+    <li> <%= link_to "About", about_path %> </li>
   </ul>
 
   <ul>
@@ -34,7 +34,7 @@
 		<div id="header">
 			<% if current_page?(root_path) %>
 				<p>All Posts</p>
-			<% elsif false && current_page?(about_path) %>
+			<% elsif current_page?(about_path) %>
 				<p>About</p>
 			<% else %>
 				<%= link_to "Back to All Posts", root_path %>
