--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -10,49 +10,9 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-    #navbar-main.navbar-collapse.collapse
-      %ul.nav.navbar-nav
-        %li.dropdown
-          %a#themes.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            Themes
-            %span.caret
-          %ul.dropdown-menu{"aria-labelledby" => "themes"}
-            %li
-              %a{:href => "../default/"} Default
-            %li.divider
-            %li
-              %a{:href => "../cerulean/"} Cerulean
-            %li
-              %a{:href => "../cosmo/"} Cosmo
-            %li
-              %a{:href => "../cyborg/"} Cyborg
-            %li
-              %a{:href => "../darkly/"} Darkly
-            %li
-              %a{:href => "../flatly/"} Flatly
-            %li
-              %a{:href => "../journal/"} Journal
-            %li
-              %a{:href => "../lumen/"} Lumen
-            %li
-              %a{:href => "../paper/"} Paper
-            %li
-              %a{:href => "../readable/"} Readable
-            %li
-              %a{:href => "../sandstone/"} Sandstone
-            %li
-              %a{:href => "../simplex/"} Simplex
-            %li
-              %a{:href => "../slate/"} Slate
-            %li
-              %a{:href => "../spacelab/"} Spacelab
-            %li
-              %a{:href => "../superhero/"} Superhero
-            %li
-              %a{:href => "../united/"} United
-            %li
-              %a{:href => "../yeti/"} Yeti
+
         %li
+          = link_to 'NEW POST', posts_path, class: 'navbar-brand'
           %a{:href => "../help/"} Help
         %li
           %a{:href => "http://news.bootswatch.com"} Blog
@@ -79,7 +39,13 @@
             %li
               %a{:href => "./_bootswatch.scss"} _bootswatch.scss
       %ul.nav.navbar-nav.navbar-right
-        %li
-          %a{:href => "http://builtwithbootstrap.com/", :target => "_blank"} Built With Bootstrap
+        - if user_signed_in?
+          %li
+            = link_to 'NEW POST', controller: 'posts', action: 'new'
         %li
           %a{:href => "https://wrapbootstrap.com/?ref=bsw", :target => "_blank"} WrapBootstrap
+        %li
+          - if user_signed_in?
+            = link_to "#{current_user.email} (Logout)", destroy_user_session_path, method: :delete
+          - else
+            = link_to 'Sign-in', new_user_session_path
